--- a/index.html
+++ b/index.html
@@ -283,15 +283,15 @@
                     <div class="group-7a">
                       <div class="flex-row-7b">
                         <div class="group-7c">
-                          <span class="email-first-name">First Name</span>
+                          <input type="text" name="first_name" span class="email-first-name" placeholder="First Name" required></span>
                         </div>
                         <div class="group-7d">
-                          <span class="email-last-name">Last Name</span>
+                           <input type="text" name="last_name" placeholder="Last Name" required span class="email-last-name"></span>
                         </div>
                       </div>
                       <div class="flex-row-ac">
                         <div class="group-7e">
-                          <span class="email-7f">Phone Number</span>
+                          <input type="tel" name="Phone_number" placeholder="Phone Number" required span class="email-7f"></span>
                         </div>
                         <div class="group-80">
                           <span class="email-81">Email</span>
