--- a/index.html
+++ b/index.html
@@ -415,9 +415,10 @@
         ><span class="link-column-item-9d"> </span>
       </div>
     </div>
-    <div class="resp"> <span> Paws!You only Adopt me from laptop🐶</span>
-      <!-- <img src="images/dog.png" alt="">
-    </div> --> 
+    <center>
+     <div class="resp"> <span> Paws! You only Adopt me from laptop🐶</span> 
+     <img src="images/dog.png" class="dog" alt="">
+    </div></center>
     <script src="script.js"></script>
   </body>
 </html>
