--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <span class="logo-text">PawCare</span>
           </div>
           <div class="item-group">
-            <span class="item-content">Home</span
-            ><span class="item-content-1">About</span
-            ><span class="item-content-2">Adoption</span
-            ><span class="item-content-3">Concerns</span>
+            <a href="#"span class="item-content">Home</span
+            ></a><a href="#"span class="item-content-1">About</span
+            ></a><a href="#"span class="item-content-2">Adoption</span
+            ></a><a href="#"span class="item-content-3">Concerns</span></a>
             <div class="nav-button">
-              <span class="nav-button-content">Contact</span>
+              <a href="#"span class="nav-button-content">Contact</span></a>
             </div>
           </div>
         </div>
